<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="20dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/cover"
                android:layout_width="110dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                tools:srcCompat="@tools:sample/avatars" />


            <TextView
                android:id="@+id/rank"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/baseline_circle_24"
                android:gravity="center"
                android:text="@string/Rank"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/cover"
                app:layout_constraintTop_toTopOf="@id/cover" />

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title"
                android:textColor="@color/lightBlue"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/rating"
                android:textSize="20sp"
                android:layout_marginStart="5dp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/favoritesHeart"
                app:layout_constraintStart_toEndOf="@+id/ratingStar"
                app:layout_constraintTop_toBottomOf="@+id/seasonAndFormat" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="170dp"
                app:layout_constraintGuide_percent="0.33" />

            <TextView
                android:id="@+id/seasonAndFormat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/season_format"
                android:textColor="@color/lightGrey"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/studio" />

            <TextView
                android:id="@+id/genres"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/genres"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/studio"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/studio"
                android:textColor="@color/lightGrey"
                android:textSize="12sp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/genres" />

            <TextView
                android:id="@+id/favorites"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/favorites"
                android:textSize="20sp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/favoritesHeart"
                app:layout_constraintTop_toBottomOf="@id/seasonAndFormat" />

            <ImageView
                android:id="@+id/ratingStar"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:contentDescription="@string/rating_star"
                android:src="@drawable/baseline_star_rate_24"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintEnd_toStartOf="@id/rating"
                app:layout_constraintTop_toBottomOf="@id/seasonAndFormat"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/favoritesHeart"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:contentDescription="@string/heart"
                android:src="@drawable/baseline_favorite_24"
                app:layout_constraintStart_toEndOf="@id/rating"
                app:layout_constraintEnd_toStartOf="@id/favorites"
                app:layout_constraintTop_toBottomOf="@id/seasonAndFormat"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>